updated styling WIP

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/9d776e11d4.js" crossorigin="anonymous"></script>
     <title>Prototype Web Page</title>
@@ -28,7 +31,6 @@
         </div>
         <div class="business-size">
             <label for="business-size">Business Size: </label>
-
             <select name="size">
                 <option value="1-10">1-10</option>
                 <option value="11-50">11-50</option>
@@ -55,8 +57,13 @@
             <input type="radio" id="option7" name="option" value="full-text-search">
             <label for="option7">Full Text Search</label><br>
             <input type="radio" id="option8" name="option" value="price">
-            <label for="option8">Price</label><br><br>
-            <input type="submit" value="Submit">
+            <label for="option8">Price</label><br>
+            <button type="submit" value="submit">
+                <link href="">
+                Continue To Schedule a Time
+                <i class="fa-solid fa-arrow-right"></i>
+                </link>
+            </button>
         </form>
     </div>
     <script src="script.js"></script>
