styled the webpage WIP

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </div>
         <div class="email-input">
             <label for="email">Business Email:</label>
-            <input type="email" placeholder="Enter your Business Email" size="40">
-            </input>
+            <input type="text" placeholder="Enter your Business Email" size="40"/>
         </div>
         <div class="business-size">
             <label for="business-size">Business Size: </label>
