updated the submit button and ensured that radio buttons populated & were mutually exclusive

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
         </div>
         <p>What is the most important thing to you in a solution?</p>
         <div class="grid" id="important-solution">
-            <!-- create these as a for loop -->
+            <!-- script generated options, refer to createImportantSolutionOptions() -->
         </div>
-        <button onclick="saveForm()">Button
-            <!-- <link href="">
-            Continue To Schedule a Time
-            <i class="fa-solid fa-arrow-right"></i>
-            </link> -->
-        </button>
+        <div class="submit-button">
+            <button class="button" onclick="saveForm()">Continue to Schedule a Time
+                <i class="fa-solid fa-arrow-right"></i>
+            </button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
