--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <i class="fa-solid fa-calendar-days fa-3x"></i>
+            <div class="icon-container">
+                <i class="fa-solid fa-calendar-days fa-3x"></i>
+            </div>
             <h1>Book a Demo</h1>
         </div>
         <div class="instructions">
