--- a/pages/qualified.html
+++ b/pages/qualified.html
@@ -8,15 +8,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <script src="https://kit.fontawesome.com/9d776e11d4.js" crossorigin="anonymous"></script>
     <title>Qualified Page</title>
 </head>
 
 <body>
-   <h1>
-       Qualified Page!
-   </h1>
+   <div class="container2">
+    <div class="header">
+        <div class="icon-container">
+            <i class="fa-regular fa-calendar-check fa-3x"></i>
+        </div>
+        <h1>Awesome! We'll contact you shortly!</h1>
+    </div>
+    <div class="instructions">
+        <p>
+            We'll send you an email with available times to meet.
+        </p>
+   </div>
 </body>
 
 </html>
