--- a/pages/unqualified.html
+++ b/pages/unqualified.html
@@ -8,15 +8,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <script src="https://kit.fontawesome.com/9d776e11d4.js" crossorigin="anonymous"></script>
     <title>Unqualified Page</title>
 </head>
 
 <body>
-   <h1>
-       Unqualified Page!
-   </h1>
+   <div class="container2">
+    <div class="header">
+        <div class="icon-container">
+            <i class="fa-regular fa-calendar-xmark fa-3x"></i>
+        </div>
+        <h1>Oh no!
+            <br>
+            All our consultants are busy
+        </h1>
+    </div>
+    <div class="instructions">
+        <p>
+            We'll let you know when the next one is available.
+        </p>
+   </div>
 </body>
 
 </html>
